# tiny

./: .gitmodules  CMakeLists.txt  LICENSE
src/: main.c
